Fix QuadF::ContainsPoint and gfx::CrossProduct on arm64

These methods require the use of doubles to not give incorrect
answers. Tests were failing on arm64 due to precision mistakes
with floats.

BUG=662561,662556

Review-Url: https://codereview.chromium.org/2504583003
Cr-Commit-Position: refs/heads/master@{#432685}

Former-commit-id: 1f740dbd1a15d3a904f40a4175eaad8c536becd7