ui/gfx/geometry/quad_unittest.cc
@@ -283,10 +283,7 @@ TEST(QuadTest, ContainsPoint) {
   EXPECT_FALSE(QuadF(a, b, c, d).Contains(a + epsilon_x));
   EXPECT_TRUE(QuadF(a, b, c, d).Contains(a + epsilon_y));
 
-#if !defined(ARCH_CPU_ARM_FAMILY)
-  // TODO(danakj): Make this pass on ARM, https://crbug.com/662561
   EXPECT_TRUE(QuadF(a, b, c, d).Contains(b));
-#endif
   EXPECT_FALSE(QuadF(a, b, c, d).Contains(b - epsilon_x));
   EXPECT_FALSE(QuadF(a, b, c, d).Contains(b - epsilon_y));
   EXPECT_TRUE(QuadF(a, b, c, d).Contains(b + epsilon_x));
